--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="shortcut icon" href="./src/M.png" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css2?family=PT+Sans+Caption:wght@700&display=swap" rel="stylesheet">
 
-    <title>Alan Morua - Portafolio</title>
+    <title>Alan Morua - Portfolio</title>
 </head>
 
 <body>
