--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
     <div id="app">
         <a href="https://api.whatsapp.com/send?phone=5491162233436&text=Hi!%20I%20have%20the%20following%20question:" target="_blank">
-            <img style="position: fixed;right: 0; bottom: 0;" class="mx-4 my-4" src="./src/whatsapp (4).png" width="50" alt="" srcset="">
+            <img style="position: fixed;right: 0; bottom: 0;z-index: 101;" class="mx-4 my-4" src="./src/whatsapp (4).png" width="50" alt="" srcset="">
         </a>
         <main>
             <img style="position: absolute;" class="mx-4 my-4" width="60" src="./src/21-removebg-preview.png" alt="m">
