--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <div class="home">
                 <div class="main1">
                     <h1>Alan Morua</h1>
-                    <h2>Desarrollador Web Full Stack Java</h2>
+                    <h2>Full Stack Java Web Developer</h2>
                 </div>
                 <div class="main2">
                     <a href="#content" class="text-decoration-none button1">Projects<ion-icon
@@ -45,32 +45,42 @@
                         aria-label="Slide 2"></button>
                     <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
                         aria-label="Slide 3"></button>
+                        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3"
+                        aria-label="Slide 4"></button>
                 </div>
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="./src/lightbank.png" class="d-block w-100" alt="...">
-                        <div class="carousel-caption d-md-block">
+                        <img src="./src/lightbank.png" class="d-block w-100" alt="lightbank">
+                        <div class="carousel-caption">
                             <h6 class="text-white">LightBank</h6>
                             <button type="button" @click="lightbank" class="btn1 mb-2"><span class="button_top">See More...</span></button>
                             <a class="text-white" href="#" @click="lightbank">See More...</a>
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <img src="./src/indiapetshop1.png" class="d-block w-100" alt="...">
-                        <div class="carousel-caption d-md-block">
+                        <img src="./src/indiapetshop1.png" class="d-block w-100" alt="indiapetshop1">
+                        <div class="carousel-caption">
                             <h6 class="text-white">India PetShop</h6>
                             <a class="text-white" href="#" @click="indiaPetShop">See More...</a>
                             <button type="button" @click="indiaPetShop" class="btn1 mb-2"><span class="button_top">See More...</span></button>
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <img src="./src/thewinest.png" class="d-block w-100" alt="...">
-                        <div class="carousel-caption theWinest d-md-block">
+                        <img src="./src/thewinest.png" class="d-block w-100" alt="theWinest">
+                        <div class="carousel-caption theWinest">
                             <h6 class="text-white">The Winest</h6>
                             <a class="text-white" href="#" @click="theWinest">See More...</a>
                             <button type="button" @click="theWinest" class="btn1 mb-2" data-bs-toggle="modal"
                                 data-bs-target="#exampleModal2" data-bs-whatever="@getbootstrap"><span
                                     class="button_top">See More...</span></button>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img src="./src/portfolio.png" class="d-block w-100" alt="portfolio">
+                        <div class="carousel-caption">
+                            <h6 class="text-white">Portfolio</h6>
+                            <a class="text-white" href="#" @click="portfolio">See More...</a>
+                            <button type="button" @click="portfolio" class="btn1 mb-2"><span class="button_top">See More...</span></button>
                         </div>
                     </div>
                 </div>
@@ -215,10 +225,10 @@
                 <img src="./src/linkedin (2).png" width="40" alt="" srcset="">
             </a>
         </div>
-        <h6><a class="text-white" href="mailto:alanmorua8@gmail.com">alanmorua8@gmail.com</a></h6>
-        <h6 class="text-white d-flex align-items-center gap-1"><img src="./src/copyright.png" width="20" alt="" > Alan Morua</h6>
-        <h6 class="text-white">Buenos Aires, Argentina</h6>
-        <h6><a class="text-white" target="_blank" href="https://drive.google.com/file/d/10Ba_VFFLEqanBVYupGHwgExYpNbBoCHU/view?usp=sharing">Curriculum Vitae</a></h6>
+        <a class="text-white fs-6" href="mailto:alanmorua8@gmail.com">alanmorua8@gmail.com</a>
+        <p class="text-white d-flex align-items-center gap-1 fs-6 mb-0"><img src="./src/copyright.png" width="20" alt="" > Alan Morua</p>
+        <p class="text-white fs-6 mb-0">Buenos Aires, Argentina</p>
+        <a class="text-white fs-6" target="_blank" href="https://drive.google.com/file/d/10Ba_VFFLEqanBVYupGHwgExYpNbBoCHU/view?usp=sharing">Curriculum Vitae</a>
     </footer>
     </div>
 
