--- a/index.html
+++ b/index.html
@@ -16,15 +16,17 @@
     <title>Alan Morua - Portfolio</title>
 </head>
 
-<body class="hidden" >
+<body class="hidden">
     <div class="loader" id="onload">
         <div class="ball"></div>
         <div class="ball"></div>
         <div class="ball"></div>
     </div>
     <div id="app">
-        <a href="https://api.whatsapp.com/send?phone=5491162233436&text=Hi!%20I%20have%20the%20following%20question:" target="_blank">
-            <img style="position: fixed;right: 0; bottom: 0;z-index:-2;" class="mx-4 my-4" src="./src/whatsapp (4).png" width="50" alt="" srcset="">
+        <a href="https://api.whatsapp.com/send?phone=5491162233436&text=Hi!%20I%20have%20the%20following%20question:"
+            target="_blank">
+            <img style="position: fixed;right: 0; bottom: 0;z-index:-2;" class="mx-4 my-4" src="./src/whatsapp (4).png"
+                width="50" alt="" srcset="">
         </a>
         <main>
             <img style="position: absolute;" class="mx-4 my-4" width="60" src="./src/21-removebg-preview.png" alt="m">
@@ -40,7 +42,7 @@
             </div>
         </main>
         <div id="content">
-            
+
             <h2 class="fs-1">Projects</h2>
             <div id="carouselExampleCaptions" class="carousel carousel-dark slide" data-bs-ride="false">
                 <div class="carousel-indicators">
@@ -50,7 +52,7 @@
                         aria-label="Slide 2"></button>
                     <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
                         aria-label="Slide 3"></button>
-                        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3"
+                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3"
                         aria-label="Slide 4"></button>
                 </div>
                 <div class="carousel-inner">
@@ -58,7 +60,8 @@
                         <img src="./src/lightbank.png" class="d-block w-100" alt="lightbank">
                         <div class="carousel-caption">
                             <h6 class="text-white">LightBank</h6>
-                            <button type="button" @click="lightbank" class="btn1 mb-2"><span class="button_top">See More...</span></button>
+                            <button type="button" @click="lightbank" class="btn1 mb-2"><span class="button_top">See
+                                    More...</span></button>
                             <a class="text-white" href="#" @click="lightbank">See More...</a>
                         </div>
                     </div>
@@ -67,7 +70,8 @@
                         <div class="carousel-caption">
                             <h6 class="text-white">India PetShop</h6>
                             <a class="text-white" href="#" @click="indiaPetShop">See More...</a>
-                            <button type="button" @click="indiaPetShop" class="btn1 mb-2"><span class="button_top">See More...</span></button>
+                            <button type="button" @click="indiaPetShop" class="btn1 mb-2"><span class="button_top">See
+                                    More...</span></button>
                         </div>
                     </div>
                     <div class="carousel-item">
@@ -85,7 +89,8 @@
                         <div class="carousel-caption">
                             <h6 class="text-white">Portfolio</h6>
                             <a class="text-white" href="#" @click="portfolio">See More...</a>
-                            <button type="button" @click="portfolio" class="btn1 mb-2"><span class="button_top">See More...</span></button>
+                            <button type="button" @click="portfolio" class="btn1 mb-2"><span class="button_top">See
+                                    More...</span></button>
                         </div>
                     </div>
                 </div>
@@ -113,7 +118,7 @@
                 <div class="card1">
                     <div class="header">
                         <div class="img-box">
-                            <img src="./src/pngegg.png"  height="50" alt="" srcset="">
+                            <img src="./src/pngegg.png" height="50" alt="" srcset="">
                         </div>
                         <h2 class="title">SPRING</h2>
                     </div>
@@ -129,7 +134,7 @@
                 <div class="card1">
                     <div class="header">
                         <div class="img-box">
-                            <img src="./src/584815fdcef1014c0b5e497a.png"  height="50" alt="" srcset="">
+                            <img src="./src/584815fdcef1014c0b5e497a.png" height="50" alt="" srcset="">
                         </div>
                         <h2 class="title">POSTGRESQL</h2>
                     </div>
@@ -137,7 +142,7 @@
                 <div class="card1">
                     <div class="header">
                         <div class="img-box">
-                            <img src="./src/gradle-elephant-icon-dark-green-secondary.png"  height="50" alt="" srcset="">
+                            <img src="./src/gradle-elephant-icon-dark-green-secondary.png" height="50" alt="" srcset="">
                         </div>
                         <h2 class="title">GRADLE</h2>
                     </div>
@@ -220,20 +225,24 @@
     </div>
     <footer>
         <div class="d-flex justify-content-center align-items-center gap-4">
-            <a href="https://github.com/AlanM-ARG" target="_blank" >
+            <a href="https://github.com/AlanM-ARG" target="_blank">
                 <img src="./src/github (1).png" width="40" alt="" srcset="">
             </a>
-            <a href="https://www.instagram.com/alanmorua17/" target="_blank" >
+            <a href="https://www.instagram.com/alanmorua17/" target="_blank">
                 <img src="./src/instagram (1).png" width="40" alt="" srcset="">
             </a>
-            <a href="https://www.linkedin.com/in/alan-morua-533213252/" target="_blank" >
+            <a href="https://www.linkedin.com/in/alan-morua-533213252/" target="_blank">
                 <img src="./src/linkedin (2).png" width="40" alt="" srcset="">
             </a>
         </div>
         <a class="text-white fs-6" href="mailto:alanmorua8@gmail.com">alanmorua8@gmail.com</a>
-        <p class="text-white d-flex align-items-center gap-1 fs-6 mb-0"><img src="./src/copyright.png" width="20" alt="" > Alan Morua</p>
-        <p class="text-white fs-6 mb-0">Buenos Aires, Argentina</p>
-        <a class="text-white fs-6" target="_blank" href="https://drive.google.com/file/d/10Ba_VFFLEqanBVYupGHwgExYpNbBoCHU/view?usp=sharing">Curriculum Vitae</a>
+        <p class="text-white d-flex align-items-center gap-1 fs-6 mb-0"><img src="./src/copyright.png" width="20"
+                alt=""> Alan Morua</p>
+        <p class="text-white fs-6 mb-0">
+            Buenos Aires, &nbsp;Argentina</p>
+        <a class="text-white fs-6" target="_blank"
+            href="https://drive.google.com/file/d/10Ba_VFFLEqanBVYupGHwgExYpNbBoCHU/view?usp=sharing">Curriculum
+            Vitae</a>
     </footer>
     </div>
 
