--- a/index.html
+++ b/index.html
@@ -5,7 +5,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="thumbnail" content="https://i.ibb.co/hRLHDth/portfolio.png" />
+    <PageMap>
+        <DataObject type="thumbnail">
+            <Attribute name="src" value="https://i.ibb.co/hRLHDth/portfolio.png" />
+            <Attribute name="width" value="100" />
+            <Attribute name="height" value="130" />
+        </DataObject>
+    </PageMap>
+    <meta name="thumbnail" content="https://i.ibb.co/hRLHDth/portfolio.png">
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
