--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link rel="shortcut icon" href="./src/M.png" type="image/x-icon">
-    <link rel="icon" type="image/jpg" href="./src/M.png"/>
+    <link rel="icon" type="image/jpg" href="./src/M.png" />
     <link href="https://fonts.googleapis.com/css2?family=PT+Sans+Caption:wght@700&display=swap" rel="stylesheet">
 
     <title>Alan Morua - Portfolio</title>
@@ -26,7 +26,7 @@
     <div id="app">
         <a href="https://api.whatsapp.com/send?phone=5491162233436&text=Hi!%20I%20have%20the%20following%20question:"
             target="_blank">
-            <img style="position: fixed;right: 0; bottom: 0;z-index:-2;" class="mx-4 my-4" src="./src/whatsapp (4).png"
+            <img style="position: fixed;right: 0; bottom: 0;z-index:1;" class="mx-4 my-4" src="./src/whatsapp (4).png"
                 width="50" alt="" srcset="">
         </a>
         <main>
@@ -257,6 +257,9 @@
     <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
     <script src="./main.js"></script>
+    <script>
+        console.log("hola");
+    </script>
 </body>
 
 </html>
