--- a/index.html
+++ b/index.html
@@ -220,6 +220,14 @@
                         <h2 class="title">BOOTSTRAP 5</h2>
                     </div>
                 </div>
+                <div class="card1">
+                    <div class="header">
+                        <div class="img-box">
+                            <img src="./src/React.png" height="50" alt="" srcset="">
+                        </div>
+                        <h2 class="title">REACT</h2>
+                    </div>
+                </div>
             </div>
         </div>
 
