--- a/index.html
+++ b/index.html
@@ -250,8 +250,7 @@
         <p class="text-white fs-6 mb-0">
             Buenos Aires, &nbsp;Argentina</p>
         <a class="text-white fs-6" target="_blank"
-            href="https://drive.google.com/file/d/1usyE3yLcE-B3KPiGhZOafVdsQLfrc6rs/view?usp=share_link">Curriculum
-            Vitae</a>
+            href="https://drive.google.com/file/d/13z5Z6t-ApWNHqxX6RwzAdkYnDPFPb-eo/view?usp=sharing">Resume</a>
     </footer>
     </div>
 
